# voxstick

./: .gitignore  CMakeLists.txt  LICENSE  PLAN.md  README.md  README.zh.md  SESSION-NOTES.md  platformio.ini  sdkconfig.defaults  sdkconfig.stick
.github/hooks/: voxstick-complete.json
.github/workflows/: build.yml
docs/: config.html  dog-preview.html  index.html  install-en.html  install.html
docs/firmware/v0.1.0/: README.md  manifest.json
docs/firmware/v0.1.1/: README.md  manifest.json
docs/firmware/v0.1.2/: README.md  manifest.json
docs/firmware/v0.1.3/: README.md  manifest.json
docs/firmware/v0.1.4/: README.md  manifest.json
docs/firmware/v0.1.5/: README.md  manifest.json
docs/firmware/v0.1.6/: README.md  manifest.json
main/: CMakeLists.txt  ble_hid.c  ble_hid.h  hid_transport.c  hid_transport.h  idf_component.yml  main.c  tusb_config.h  usb_descriptors.c  usb_recovery.c  vox_config.c  vox_config.h  vox_notify.h
tools/: copilot-complete-hook.sh  copilot_complete_trigger.c  draw-doc-assets.swift  hid_download_trigger.c  trigger-download.sh  uac_download_trigger.c  usb_download_trigger.c
